--- a/requirements.txt
+++ b/requirements.txt
@@ -24,12 +24,14 @@ NSKeyedUnArchiver==1.5
 numpy==1.24.2
 packaging==23.0
 pathy==0.10.1
+pdfrw==0.4
 preshed==3.0.8
 pyasn1==0.4.8
 pycparser==2.21
 pycryptodome==3.17
 pydantic==1.10.6
 Pygments==2.14.0
+PyPDF2==3.0.1
 pywatchman==1.4.1
 PyYAML==6.0
 requests==2.28.2
